deploy/tests/config/experimental/gwapi-resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: haproxy-gwc
spec:
  controllerName: haproxy.org/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway1
  namespace: default
spec:
  gatewayClassName: haproxy-gwc
  listeners:
    - allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TCPRoute
        namespaces:
          from: All
      name: listener1
      port: 8000
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: refgrantns1
  namespace: default
spec:
  from:
    - group: "gateway.networking.k8s.io"
      kind: "TCPRoute"
      namespace: default
  to:
    - group: ""
      kind: "Service"
